--- a/_less/config.less
+++ b/_less/config.less
@@ -6,6 +6,12 @@
 @h5-font-size: 1;
 @h6-font-size: 1;
 
+@a-color: #222;
+@logo-color: #FFF;
+@body-background: #f18400;
+@telBox-background: #eedb7d;
+@nav-hover-background: #f1ae5d;
+
 @base03:    #f18400;
 @base02:    #f19c36;
 @base01:    #222;
