Replace colors with less variables and put them in config.less

--- a/_less/main.less
+++ b/_less/main.less
@@ -20,7 +20,7 @@ button,
 input,
 select,
 textarea {
-    color: @base00;
+    color: @base-color;
 }
 
 body {
@@ -36,14 +36,14 @@ body {
  */
 
 ::-moz-selection {
-    color: @base3;
-    background: @blue;
+    color: @selection-color;
+    background: @selection-background;
     text-shadow: none;
 }
 
 ::selection {
-    color: @base3;
-    background: @blue;
+    color: @selection-color;
+    background: @selection-background;
     text-shadow: none;
 }
 
