--- a/_less/config.less
+++ b/_less/config.less
@@ -6,8 +6,12 @@
 @h5-font-size: 1;
 @h6-font-size: 1;
 
+@base-color: #222;
 @a-color: #222;
 @logo-color: #FFF;
 @body-background: #f18400;
 @telBox-background: #eedb7d;
 @nav-hover-background: #f1ae5d;
+
+@selection-background: #268bd2;
+@selection-color: #fff;
