Add article background as a color variable

--- a/_less/config.less
+++ b/_less/config.less
@@ -12,6 +12,7 @@
 @selection-color: #fff;
 
 @body-background: #f18400;
-@telBox-background: #eedb7d;
+@telBox-background: #f1ae5d;
 @nav-hover-background: #f1ae5d;
+@article-background: #fff;
 @selection-background: #268bd2;
