--- a/_less/custom.less
+++ b/_less/custom.less
@@ -116,7 +116,7 @@ a.logo {
             white-space: nowrap;
 
             &:hover, &:focus {
-                background: @nav-hover-background;
+                background-color: @nav-hover-background;
             }
         }
     }
@@ -128,7 +128,7 @@ a.logo {
 
     word-wrap: break-word;
 
-    background: #fff;
+    background-color: @article-background;
     padding: 0 (@line-height / 2em);
     margin: 0 (@line-height / 2em);
     .rounded(@line-height / 2em);
