--- a/_less/custom.less
+++ b/_less/custom.less
@@ -75,7 +75,7 @@ a, a:active, a:visited {
 }
 
 .header {
-    padding: 0 (0em + @line-height);
+    margin: 0 (@line-height / 1.5em);
 }
 
 a.logo {
