--- a/css/70e1e18cf7271939e2e5f61cbc846f8b.css
+++ b/css/70e1e18cf7271939e2e5f61cbc846f8b.css
@@ -1,9 +1,10 @@
 article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}
 audio,canvas,video{display:inline-block}
 audio:not([controls]){display:none;height:0}
-[hidden]{display:none}
+[hidden],template{display:none}
 html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
 body{margin:0}
+a{background:transparent}
 a:focus{outline:thin dotted}
 a:active,a:hover{outline:0}
 h1{font-size:2em;margin:0.67em 0}
@@ -40,7 +41,7 @@ body{font-family:"Palatino Linotype",Palatino,Palladio,"URW Palladio L","Book An
 ::-moz-selection{color:#fff;background:#268bd2;text-shadow:none}
 ::selection{color:#fff;background:#268bd2;text-shadow:none}
 hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1.5em 0;padding:0}
-img{vertical-align:middle}
+audio,canvas,img,video{vertical-align:middle}
 fieldset{border:0;margin:0;padding:0}
 textarea{resize:vertical}
 h1{margin:1em 0;font-size:1.5em;line-height:1}
