Add alt tags to images

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 <div class="body">
     <div class="header">
         <a class="logo" href="." title="Business English Bocholt">
-            <img height="60" width="60" src="img/logo.png">Business English Bocholt
+            <img height="60" width="60" src="img/logo.png" alt="">Business English Bocholt
         </a>
         <div class="telBox">
             <p><a href="mailto:mok@business-english-bocholt.de">mok@business-english-bocholt.de</a></p>
