telBox: add more left/right padding

--- a/_less/custom.less
+++ b/_less/custom.less
@@ -91,7 +91,7 @@ a.logo {
     display: none;
     vertical-align: middle;
     font-size: 0.8em;
-    padding: 0.375em;
+    padding: 0.375em 0.625em;
     margin: 0.9375em 0;
     margin-left: 4em;
     background-color: @telBox-background;
