--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,6 @@
 <ul class="nav">
     <li><a href=".">Startseite</a></li>
+    <li><a href="uebersetzungen">Übersetzungen</a></li>
     <li><a href="ueber-mich">Über mich</a></li>
     <li><a href="kontakt">Kontakt</a></li>
 </ul>
