Add Vorgehensweise and Bereiche sections

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,7 @@
 <ul class="nav">
     <li><a href=".">Startseite</a></li>
+    <li><a href="vorgehensweise">Vorgehensweise</a></li>
+    <li><a href="bereiche">Bereiche</a></li>
     <li><a href="uebersetzungen">Übersetzungen</a></li>
     <li><a href="ueber-mich">Über mich</a></li>
     <li><a href="kontakt">Kontakt</a></li>
