--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     {% if page.description %}<meta name="description" content="{{page.description}}">{% else %}Missing page description{% endif %}
     <meta name="viewport" content="width=device-width">
     <base href="{{site.url}}{{site.baseurl}}">
-    <link rel="stylesheet" href="css/intermediate.css">
+    <link rel="stylesheet" href="css/f5bc08638c6be6fa383235840d59a82f.css">
     {% if page.canonical %}<link rel="canonical" href="{{site.url}}{{site.baseurl}}{{page.canonical}}">{% endif %}
 </head>
 <body>
