--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 {% if page.language %}{% assign language = page.language %}{% else %}{% assign language = site.language %}{% endif %}<html lang="{{language}}">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {% if page.no_title_expansion %}<title>{{ page.title }}</title>{% else %}<title>{{ page.title }} | {{ site.title }}</title>{% endif %}
     {% if page.description %}<meta name="description" content="{{page.description}}">{% else %}Missing page description{% endif %}
     <meta name="viewport" content="width=device-width">
