--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
     {% if page.no_title_expansion %}<title>{{ page.title }}</title>{% else %}<title>{{ page.title }} | {{ site.title }}</title>{% endif %}
     {% if page.description %}<meta name="description" content="{{page.description}}">{% else %}Missing page description{% endif %}
     <meta name="viewport" content="width=device-width">
-    <base href="{{site.url}}{{site.baseurl}}">
+    <base href="{{site.url}}{{site.baseurl}}/">
     <link rel="stylesheet" href="styles.css">
-    {% if page.canonical %}<link rel="canonical" href="{{site.url}}{{site.baseurl}}{{page.canonical}}">{% endif %}
+    {% if page.canonical %}<link rel="canonical" href="{{site.url}}{{site.baseurl}}/{{page.canonical}}">{% endif %}
 </head>
 <body>
 <div class="body">
