--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 /*
     All the font-size, margin and line-height values are chosen to achieve a good
     rhythm of the text. Rhythm of the text means that the vertical space is divided
@@ -12,41 +13,41 @@
 */
 
 h1 {
-    margin: (0em + $line-height / $h1-font-size) 0;
-    font-size: (0em + $h1-font-size);
-    line-height: $line-height / $h1-font-size;
+    margin: (0em + math.div($line-height, $h1-font-size)) 0;
+    font-size: 0em + $h1-font-size;
+    line-height: math.div($line-height, $h1-font-size);
 }
 
 h2 {
-    margin: (0em + $line-height / $h2-font-size) 0;
-    font-size: (0em + $h2-font-size);
-    line-height: $line-height / $h2-font-size;
+    margin: (0em + math.div($line-height, $h2-font-size)) 0;
+    font-size: 0em + $h2-font-size;
+    line-height: math.div($line-height, $h2-font-size);
 }
 
 h3 {
-    margin: (0em + $line-height / $h3-font-size) 0;
-    font-size: (0em + $h3-font-size);
-    line-height: $line-height / $h3-font-size;
+    margin: (0em + math.div($line-height, $h3-font-size)) 0;
+    font-size: 0em + $h3-font-size;
+    line-height: math.div($line-height, $h3-font-size);
 }
 
 h4 {
-    margin: (0em + $line-height / $h4-font-size) 0;
-    font-size: (0em + $h4-font-size);
+    margin: (0em + math.div($line-height, $h4-font-size)) 0;
+    font-size: 0em + $h4-font-size;
     font-style: italic;
-    line-height: ($line-height / $h4-font-size);
+    line-height: math.div($line-height, $h4-font-size);
 }
 
 h5 {
-    margin: (0em + $line-height / $h5-font-size) 0;
-    font-size: (0em + $h5-font-size);
-    line-height: ($line-height / $h5-font-size);
+    margin: (0em + math.div($line-height, $h5-font-size)) 0;
+    font-size: 0em + $h5-font-size;
+    line-height: math.div($line-height, $h5-font-size);
 }
 
 h6 {
-    margin: (0em + $line-height / $h6-font-size) 0;
-    font-size: (0em + $h6-font-size);
+    margin: (0em + math.div($line-height, $h6-font-size)) 0;
+    font-size: 0em + $h6-font-size;
     font-style: italic;
-    line-height: ($line-height / $h6-font-size);
+    line-height: math.div($line-height, $h6-font-size);
 }
 
 p {
@@ -63,11 +64,15 @@ ul ul,
 ul ol,
 ol ol,
 ol ul {
-    margin: 0;
+	margin: 0;
 }
 
 a, a:active, a:visited {
     color: $a-color;
+}
+
+body {
+    margin: 0;
 }
 
 .body {
@@ -75,14 +80,18 @@ a, a:active, a:visited {
 }
 
 .header {
-    margin: 0 (0em + $line-height / 1.5);
+    margin: 0 (0em + math.div($line-height, 1.5));
+}
+
+.header img {
+    display: inline;
 }
 
 a.logo {
     font-size: 1.25em;
     display: inline-block;
     vertical-align: middle;
-    margin: (0em + $line-height / 2.5) 0;
+    margin: (0em + math.div($line-height, 2.5)) 0;
     color: $logo-color;
     text-decoration: none;
 }
@@ -113,13 +122,13 @@ a.logo {
 .nav {
     list-style: none;
     padding: 0;
-    margin: (0em + $line-height / 2) 0;
+    margin: (0em + math.div($line-height, 2)) 0;
 
     li {
         display: inline-block;
 
         a {
-            padding: (0em + $line-height / 6) (0em + $line-height / 3);
+            padding: (0em + math.div($line-height, 6)) (0em + math.div($line-height, 3));
             white-space: nowrap;
 
             &:hover, &:focus {
@@ -136,9 +145,9 @@ a.logo {
     word-wrap: break-word;
 
     background-color: $article-background;
-    padding: 0 (0em + $line-height / 2);
-    margin: 0 (0em + $line-height / 2);
-    @include rounded(0em + $line-height / 2);
+    padding: 0 (0em + math.div($line-height, 2));
+    margin: 0 (0em + math.div($line-height, 2));
+    @include rounded(0em + math.div($line-height, 2));
     @include clearfix;
 
     .mary {
@@ -148,6 +157,8 @@ a.logo {
         height: auto;
         max-width: 180px;
         max-height: 200px;
+        @include rounded(0em + math.div($line-height, 2));
+        object-fit: cover;
     }
 }
 
