make phonenumber directly callable

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
         </a>
         <div class="telBox">
             <p><a href="mailto:mok@business-english-bocholt.de">mok@business-english-bocholt.de</a></p>
-            <p>+49 2871 3108999</p>
+            <p><a href="tel:+4928713108999">+49 2871 3108999</a></p>
         </div>
 {% include nav.html %}
     </div>
